Update application properties and pom.xml

--- a/staff-management/src/main/resources/application.properties
+++ b/staff-management/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-# Data source (SQL Server example) - change host, port, name, user, pass
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=StaffManagement;encrypt=false;trustServerCertificate=true
-spring.datasource.username=user
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# MySQL Database Connection
+spring.datasource.url=jdbc:mysql://localhost:3306/StaffManagement
+spring.datasource.username=root
+spring.datasource.password=root1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Optional: show SQL in console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Make Whitelabel show stacktrace in browser to debug (only dev)
-server.error.include-message=always
-server.error.include-stacktrace=always
-logging.level.org.springframework=DEBUG
