--- a/staffsystem/pom.xml
+++ b/staffsystem/pom.xml
@@ -42,10 +42,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+        <!-- MySQL Connector/J -->
         <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>12.6.1.jre11</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.1.0</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
 			<groupId>org.springframework.boot</groupId>
