--- a/staffsystem/src/main/resources/application.properties
+++ b/staffsystem/src/main/resources/application.properties
@@ -3,17 +3,17 @@ spring.application.name=staffsystem
 # ===============================
 # DATABASE CONFIGURATION
 # ===============================
-spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=staffsystem;encrypt=true;trustServerCertificate=true
+# MySQL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/staffsystem_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=staffuser
-spring.datasource.password=staff@123
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.password=Staff@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-
-# ===============================
-# SERVER CONFIG
-# ===============================
+# server
 server.port=8080
 
